@@ -1,21 +1,15 @@
 package steps.api;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import constant.Operator;
+import model.Common.arsenalCollection.*;
+import model.Common.arsenalCollection.constants.Operator;
 import io.cucumber.datatable.DataTable;
 import io.cucumber.java.en.And;
 import io.cucumber.java.en.Then;
 import io.restassured.response.Response;
 import model.Common.UserInfo;
-import model.Common.arsenalCollection.ArsenalCollection;
-import model.Common.arsenalCollection.Content;
-import model.Common.arsenalCollection.MultiSourceRequest;
-import model.Common.arsenalCollection.SourceCollection;
 import model.response.userPersona.UserPersonaDTO;
 import org.junit.Assert;
-import services.common.CatalogESService;
 import services.discovery.ArsenalService;
 import services.discovery.DownStreamService;
 import utilities.Utils;
@@ -34,6 +28,19 @@ public class MultiSourceSteps {
     ArsenalCollection response;
     ArsenalCollection req;
     MultiSourceRequest mutiSourceRequest;
+    PostProcessing postProcessing;
+
+    String[] CPList = {
+            "LIONSGATEPLAY",
+            "SONYLIV_VOD",
+            "CHAUPAL",
+            "ZEEFIVE",
+            "MINITV",
+            "HOTSTAR_DTH",
+            "VROTT",
+            "ULTRA",
+            "HOICHOI",
+    };
 
     public static Set<String> getUserLanguage(String type, UserPersonaDTO userPersona, Map<String, String> liveAttribute) {
         Set<String> userLangList = new HashSet<>();
@@ -63,15 +70,18 @@ public class MultiSourceSteps {
             case "udl", "cudl" -> userLangList.addAll(dominantLang);
             default -> Collections.emptyList();
         }
-        ;
-
         return userLangList;
-
     }
 
     @And("build multiSource request in dynamic Meta")
     public void buildMultiSourceRequestInDynamicMeta(List<MultiSourceRequest> mutiSourceRequest) {
         this.mutiSourceRequest = mutiSourceRequest.getFirst();
+    }
+
+    @And("post process request with")
+    public void postProcessRequestWith(PostProcessing postProcessing) {
+        this.postProcessing = postProcessing;
+        req.getDynamicMeta().getMixParam().setPostProcessing(this.postProcessing);
     }
 
     @And("build source collection list request for multiSource")
@@ -133,7 +143,7 @@ public class MultiSourceSteps {
 
     @And("pass params for multiSource request")
     public void passParamsForMultiSourceRequest(DataTable dataTable) throws IOException {
-        Map<String, String[]> params = convertMapOfStringToMapOfList(Utils.convertDataTableToMap(dataTable).get(0));
+        Map<String, String[]> params = convertMapOfStringToMapOfList(Utils.convertDataTableToMap(dataTable).getFirst());
         req = CommonSteps.createDownStreamApiRequest("multi-source", params, multiSourceUrl);
         req.getDynamicMeta().getMixParam().setMultiSourceRequest(this.mutiSourceRequest);
     }
@@ -198,7 +208,6 @@ public class MultiSourceSteps {
         Assert.assertEquals("tlxsta_225h79991767071939478", response.getContents().get(0).getContentId());
         Assert.assertEquals("tlxsta_8fw560791765539446323", response.getContents().get(1).getContentId());
         Assert.assertEquals("tlxsta_9kne94541757784501944", response.getContents().get(2).getContentId());
-
     }
 
     @Then("Verify when two promoted tile is pinned on the same position then only one should be visible")
@@ -207,5 +216,98 @@ public class MultiSourceSteps {
         for (int i = 1; i < response.getContents().size(); i++) {
             Assert.assertNotEquals("tlxsta_zy8n02301756717793339", response.getContents().get(i).getContentId());
         }
+    }
+
+    @Then("Verify 3 content from Svod 2.0 and 3 content form SVOD + Avod")
+    public void verifyContentFromSvodAndContentFormSVODAvod() {
+        int svod2Count = 0;
+        int svodAvodCount = 0;
+        int avodCount = 0;
+        for (int i = 0; i < 7; i++) {
+            if (response.getContents().get(i).getExtras().get("_free").equals("true")
+                    || response.getContents().get(i).getExtras().get("_freeFirstEpisode").equals("true")
+                    || response.getContents().get(i).getExtras().get("_freeFirstSeason").equals("true")) {
+                avodCount++;
+            } else if (Arrays.toString(CPList).contains(response.getContents().get(i).getExtras().get("_cpId"))) {
+                svodAvodCount++;
+            } else svod2Count++;
+        }
+        Assert.assertEquals(3, svod2Count);
+        Assert.assertEquals(3, svodAvodCount + avodCount);
+    }
+
+    @Then("Verify 5 content from AVod + Svod and 1 content form \\(SVOD 2.0).")
+    public void verifyContentFromAVodSvodAndContentFormSVOD() {
+        int svod2Count = 0;
+        int svodAvodCount = 0;
+        int avodCount = 0;
+        for (int i = 0; i < 7; i++) {
+            if (response.getContents().get(i).getExtras().get("_free").equals("true")
+                    || response.getContents().get(i).getExtras().get("_freeFirstEpisode").equals("true")
+                    || response.getContents().get(i).getExtras().get("_freeFirstSeason").equals("true")) {
+                avodCount++;
+            } else if (Arrays.toString(CPList).contains(response.getContents().get(i).getExtras().get("_cpId"))) {
+                svodAvodCount++;
+            } else svod2Count++;
+        }
+        Assert.assertEquals(1, svod2Count);
+        Assert.assertEquals(5, svodAvodCount + avodCount);
+    }
+
+    @Then("Verify 3 content from AVod and 3 content form \\(SVOD and SVOD 2.0).")
+    public void verifyContentFromAVodAndContentFormSVODAndSVOD() {
+        int svod2Count = 0;
+        int svodAvodCount = 0;
+        int avodCount = 0;
+        for (int i = 0; i < 7; i++) {
+            if (response.getContents().get(i).getExtras().get("_free").equals("true")
+                    || response.getContents().get(i).getExtras().get("_freeFirstEpisode").equals("true")
+                    || response.getContents().get(i).getExtras().get("_freeFirstSeason").equals("true")) {
+                avodCount++;
+            } else if (Arrays.toString(CPList).contains(response.getContents().get(i).getExtras().get("_cpId"))) {
+                svodAvodCount++;
+            } else svod2Count++;
+        }
+        Assert.assertEquals(3, svod2Count + svodAvodCount);
+        Assert.assertEquals(3, avodCount);
+    }
+
+    @Then("Verify Broadband upSell tile is not present on the banner")
+    public void verifyBroadbandUpSellTileIsNotPresentOnTheBanner() {
+        for (int i = 0; i < response.getContents().size(); i++) {
+            if (!response.getContents().get(i).getExtras().containsKey("_tileSubType")) {
+                Assert.assertFalse(response.getContents().get(i).getExtras().containsKey("_tileSubType"));
+            } else {
+                Assert.assertNotEquals("UPSELL_TILE", response.getContents().get(i).getExtras().get("_tileSubType"));
+            }
+        }
+    }
+
+    @Then("Verify Broadband upSell tile is present on the banner")
+    public void verifyBroadbandUpSellTileIsPresentOnTheBanner() {
+        boolean upsellTilePresent = false;
+        for (int i = 0; true; i++) {
+            if (response.getContents().get(i).getExtras().containsKey("_tileSubType")) {
+                if (response.getContents().get(i).getExtras().get("_tileSubType").equals("UPSELL_TILE")) {
+                    upsellTilePresent = true;
+                    break;
+                }
+            }
+        }
+        Assert.assertTrue(upsellTilePresent);
+    }
+
+    @And("Verify Only unsubscribed CP is recommended from the upsell collection")
+    public void verifyOnlyUnsubscribedCPIsRecommendedFromTheUpsellCollection() {
+        int count = 0;
+        for (int i = 0; i < 7; i++) {
+            if (response.getContents().get(i).getExtras().containsKey("_tileSubType")) {
+                if (response.getContents().get(i).getExtras().get("_tileSubType").equals("UPSELL_TILE")) {
+                    Assert.assertEquals("AMAZON_PRIME", response.getContents().get(i).getExtras().get("_cpId"));
+                    count++;
+                }
+            }
+        }
+        Assert.assertEquals(1, count);
     }
 }
